[gd_scene load_steps=6 format=3 uid="uid://byjeool2psqp"]

[ext_resource type="Theme" uid="uid://ddtpaskjxxic6" path="res://Resources/gui_theme.tres" id="1_uh11k"]
[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_vd825"]
[ext_resource type="Shader" path="res://Resources/blur.gdshader" id="3_pt4cv"]
[ext_resource type="TileSet" uid="uid://ct3rlckpr6qnx" path="res://Resources/arena_tiles.tres" id="3_qsihb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cjxu5"]
shader = ExtResource("3_pt4cv")
shader_parameter/blur_amount = 0.8
shader_parameter/mix_amount = 0.2
shader_parameter/color_over = Color(0.879503, 0.842897, 0.924499, 1)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uh11k")
script = ExtResource("1_vd825")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = ExtResource("3_qsihb")
format = 2
layer_0/tile_data = PackedInt32Array(0, 5, 0, 65536, 5, 0, 131072, 5, 0, 196608, 5, 0, 262144, 5, 0, 327680, 5, 0, 393216, 5, 0, 458752, 5, 0, 524288, 5, 0, 589824, 5, 0, 655360, 5, 0, 1, 5, 0, 65537, 5, 0, 131073, 5, 0, 196609, 5, 0, 262145, 5, 0, 327681, 5, 0, 393217, 5, 0, 458753, 5, 0, 524289, 5, 0, 589825, 5, 0, 655361, 5, 0, 2, 5, 0, 65538, 5, 0, 131074, 5, 0, 196610, 5, 0, 262146, 5, 0, 327682, 5, 0, 393218, 5, 0, 458754, 5, 0, 524290, 5, 0, 589826, 5, 0, 655362, 5, 0, 3, 5, 0, 65539, 5, 0, 131075, 5, 0, 196611, 5, 0, 262147, 5, 0, 327683, 5, 0, 393219, 5, 0, 458755, 5, 0, 524291, 5, 0, 589827, 5, 0, 655363, 5, 0, 4, 5, 0, 65540, 5, 0, 131076, 5, 0, 196612, 5, 0, 262148, 5, 0, 327684, 5, 0, 393220, 5, 0, 458756, 5, 0, 524292, 5, 0, 589828, 5, 0, 655364, 5, 0, 5, 5, 0, 65541, 5, 0, 131077, 5, 0, 196613, 5, 0, 262149, 5, 0, 327685, 5, 0, 393221, 5, 0, 458757, 5, 0, 524293, 5, 0, 589829, 5, 0, 655365, 5, 0, 6, 5, 0, 65542, 5, 0, 131078, 5, 0, 196614, 5, 0, 262150, 5, 0, 327686, 5, 0, 393222, 5, 0, 458758, 5, 0, 524294, 5, 0, 589830, 5, 0, 655366, 5, 0, 7, 5, 0, 65543, 5, 0, 131079, 5, 0, 196615, 5, 0, 262151, 5, 0, 327687, 5, 0, 393223, 5, 0, 458759, 5, 0, 524295, 5, 0, 589831, 5, 0, 655367, 5, 0, 8, 5, 0, 65544, 5, 0, 131080, 5, 0, 196616, 5, 0, 262152, 5, 0, 327688, 5, 0, 393224, 5, 0, 458760, 5, 0, 524296, 5, 0, 589832, 5, 0, 655368, 5, 0, 9, 5, 0, 65545, 5, 0, 131081, 5, 0, 196617, 5, 0, 262153, 5, 0, 327689, 5, 0, 393225, 5, 0, 458761, 5, 0, 524297, 5, 0, 589833, 5, 0, 655369, 5, 0, 10, 5, 0, 65546, 5, 0, 131082, 5, 0, 196618, 5, 0, 262154, 5, 0, 327690, 5, 0, 393226, 5, 0, 458762, 5, 0, 524298, 5, 0, 589834, 5, 0, 655370, 5, 0, 11, 5, 0, 65547, 5, 0, 131083, 5, 0, 196619, 5, 0, 262155, 5, 0, 327691, 5, 0, 393227, 5, 0, 458763, 5, 0, 524299, 5, 0, 589835, 5, 0, 655371, 5, 0, 12, 5, 0, 65548, 5, 0, 131084, 5, 0, 196620, 5, 0, 262156, 5, 0, 327692, 5, 0, 393228, 5, 0, 458764, 5, 0, 524300, 5, 0, 589836, 5, 0, 655372, 5, 0, 13, 5, 0, 65549, 5, 0, 131085, 5, 0, 196621, 5, 0, 262157, 5, 0, 327693, 5, 0, 393229, 5, 0, 458765, 5, 0, 524301, 5, 0, 589837, 5, 0, 655373, 5, 0, 14, 5, 0, 65550, 5, 0, 131086, 5, 0, 196622, 5, 0, 262158, 5, 0, 327694, 5, 0, 393230, 5, 0, 458766, 5, 0, 524302, 5, 0, 589838, 5, 0, 655374, 5, 0, 15, 5, 0, 65551, 5, 0, 131087, 5, 0, 196623, 5, 0, 262159, 5, 0, 327695, 5, 0, 393231, 5, 0, 458767, 5, 0, 524303, 5, 0, 589839, 5, 0, 655375, 5, 0, 16, 5, 0, 65552, 5, 0, 131088, 5, 0, 196624, 5, 0, 262160, 5, 0, 327696, 5, 0, 393232, 5, 0, 458768, 5, 0, 524304, 5, 0, 589840, 5, 0, 655376, 5, 0, 17, 5, 0, 65553, 5, 0, 131089, 5, 0, 196625, 5, 0, 262161, 5, 0, 327697, 5, 0, 393233, 5, 0, 458769, 5, 0, 524305, 5, 0, 589841, 5, 0, 655377, 5, 0, 18, 5, 0, 65554, 5, 0, 131090, 5, 0, 196626, 5, 0, 262162, 5, 0, 327698, 5, 0, 393234, 5, 0, 458770, 5, 0, 524306, 5, 0, 589842, 5, 0, 655378, 5, 0, 19, 5, 0, 65555, 5, 0, 131091, 5, 0, 196627, 5, 0, 262163, 5, 0, 327699, 5, 0, 393235, 5, 0, 458771, 5, 0, 524307, 5, 0, 589843, 5, 0, 655379, 5, 0, 20, 5, 0, 65556, 5, 0, 131092, 5, 0, 196628, 5, 0, 262164, 5, 0, 327700, 5, 0, 393236, 5, 0, 458772, 5, 0, 524308, 5, 0, 589844, 5, 0, 655380, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, -1, 5, 0, 65535, 5, 0, 131071, 5, 0, 196607, 5, 0, 262143, 5, 0, 327679, 5, 0, 393215, 5, 0, 458751, 5, 0, 524287, 5, 0, 589823, 5, 0, 655359, 5, 0, 720895, 5, 0, 786431, 5, 0, -65536, 5, 0, -65535, 5, 0, -65534, 5, 0, -65533, 5, 0, -65532, 5, 0, -65531, 5, 0, -65530, 5, 0, -65529, 5, 0, -65528, 5, 0, -65527, 5, 0, -65526, 5, 0, -65525, 5, 0, -65524, 5, 0, -65523, 5, 0, -65522, 5, 0, -65521, 5, 0, -65520, 5, 0, -65519, 5, 0, -65518, 5, 0, -65517, 5, 0, -65516, 5, 0)

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_cjxu5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 16.0
offset_right = 86.0
offset_bottom = 47.0
text = "<- Back"

[node name="Settings" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -27.0
offset_right = 72.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="Gamepad" type="HBoxContainer" parent="Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Settings/Gamepad"]
layout_mode = 2
text = "Use controller?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="Settings/Gamepad"]
layout_mode = 2

[node name="Fullscreen" type="HBoxContainer" parent="Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Settings/Fullscreen"]
layout_mode = 2
text = "Fullscreen:"

[node name="FullscreenCheck" type="CheckBox" parent="Settings/Fullscreen"]
layout_mode = 2

[node name="Resolution" type="HBoxContainer" parent="Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/Resolution"]
layout_mode = 2
text = "Resolution: "

[node name="Resolution" type="OptionButton" parent="Settings/Resolution"]
layout_mode = 2
item_count = 3
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1280 x 800"
popup/item_1/id = 1
popup/item_2/text = "1280 x 720"
popup/item_2/id = 2

[node name="Sound" type="HBoxContainer" parent="Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Settings/Sound"]
layout_mode = 2
text = "Sound: "
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="Settings/Sound"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001

[node name="Mute" type="CheckBox" parent="Settings/Sound"]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Settings/Gamepad/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="Settings/Fullscreen/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="item_selected" from="Settings/Resolution/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="value_changed" from="Settings/Sound/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="Settings/Sound/Mute" to="." method="_on_mute_toggled"]
